# rocQuantum-main

./: .gitignore  BACKLOG.json  EVIDENCE_INDEX.md  NEXT_PLAN.md  PR_PLAN.md  ROCM_CI_SETUP.md  VALIDATION_MATRIX.md  VALIDATION_RESULTS.md  agent1_ci_build.md  agent1_integration.md  agent2_dev_environment.md  agent2_hipstatevec_distributed.md  agent3_rccl_docs_alignment.md  agent3_rocm_ci.md  agent4_hiptensornet_optimizer_dtype.md  agent4_runtime_statevec_rccl.md  agent5_compiler_compile_and_execute.md  agent5_tensornet_validation_perf.md  agent6_e2e_compiler_python_consolidation.md  agent6_python_api_and_consolidation.md
rocQuantum-main/: CMakeLists.txt  CURRENT_STATE_AUDIT.md  FEATURE_TRUTH_MATRIX.md  FINAL_GAP_REPORT.md  IMPLEMENT_NOW_PLAN.md  LICENSE  README.md  ROADMAP.md  ROCM_INTEGRATION_AUDIT.md  TOP_GAPS_AND_PRIORITIES.md  bindings.cpp  build.bat  build_rocq.bat  example.py  install_python_module.bat  install_rocq.bat  pyproject.toml  requirements.txt  rocq_cli.py  setup.py  test_bindings.py
rocQuantum-main/.github/workflows/: ci.yml
rocQuantum-main/OPTIONAL_CODE_CHANGES/: README.md
rocQuantum-main/benchmarks/: benchmark_manifest.json  densitymat_channel_benchmark.cpp  distributed_reduction_benchmark.cpp  run_benchmark.py  run_release_benchmarks.py  statevec_core_benchmark.cpp  tensornet_contraction_benchmark.cpp
rocQuantum-main/build-codex/: CMakeCache.txt
rocQuantum-main/build-hip/: CMakeCache.txt
rocQuantum-main/cmake/: rocQuantumConfig.cmake.in
rocQuantum-main/cmake/install_consumer_smoke/: CMakeLists.txt  main.cpp
rocQuantum-main/examples/: adjoint_example.py  advanced_path_example.py  bell_state_density_matrix.py  dynamic_circuit_example.py  expectation_example.py  gradient_example.py  multi_control_gate_example.py  multi_gpu_swap_example.py  run_bell_state.py  run_simple_circuit.py  run_simple_vqe.py  sampling_example.py  slicing_example.py  tensornet_example.py  vqe_h2.py  vqe_h2_noisy.py  vqe_lih.py
rocQuantum-main/examples/qec/: repetition_code_example.py
rocQuantum-main/include/rocquantum/: QuantumSimulator.h
rocQuantum-main/integrations/: _compat_setup.py
rocQuantum-main/integrations/cirq-rocm/: README.md  setup.py
rocQuantum-main/integrations/cirq-rocm/cirq_rocm/: __init__.py  roc_quantum_simulator.py
rocQuantum-main/integrations/pennylane-rocq/: README.md  setup.py
rocQuantum-main/integrations/pennylane-rocq/pennylane_rocq/: __init__.py  roc_device.py  rocq_device.py
rocQuantum-main/integrations/pennylane-rocq/tests/: test_device.py
rocQuantum-main/integrations/qiskit-rocquantum-provider/: README.md  setup.py
rocQuantum-main/integrations/qiskit-rocquantum-provider/qiskit_rocquantum_provider/: __init__.py  backend.py  estimator.py  job.py  provider.py  sampler.py
rocQuantum-main/integrations/qiskit-rocquantum-provider/tests/: test_backend.py
rocQuantum-main/python/rocq/: CMakeLists.txt  __init__.py  api.py  bindings.cpp
rocQuantum-main/rocq/: __init__.py  backends.py  gates.py  kernel.py  noise.py  operator.py  qvec.py  spin.py
rocQuantum-main/rocq/legacy/: __init__.py
rocQuantum-main/rocqCompiler/: CMakeLists.txt  HipStateVecBackend.cpp  HipStateVecBackend.h  MLIRCompiler.cpp  MLIRCompiler.h  QuantumBackend.h  QuantumDialect.cpp  QuantumOps.td  SimulatorDialect.cpp  SimulatorOps.td
rocQuantum-main/rocqCompiler/passes/: QuantumToSimulatorPass.cpp  SimulatorToQIRPass.cpp
rocQuantum-main/rocquantum/: CMakeLists.txt  __init__.py  circuit.py  core.py  framework_runtime.py
rocQuantum-main/rocquantum/backends/: alice_bob.py  base.py  infleqtion.py  ionq.py  iqm.py  orca.py  pasqal.py  qristal.py  quantinuum.py  quantum_machines.py  quera.py  rigetti.py  seeqc.py  xanadu.py
rocQuantum-main/rocquantum/include/rocquantum/: GateFusion.h  Pathfinder.h  PermutationKernels.h  TensorView.h  hipDensityMat.h  hipStateVec.h  hipTensorNet.h  hipTensorNet_api.h  hipTensorNet_internal_types.h  rocTensorUtil.h  rocWorkspaceManager.h
rocQuantum-main/rocquantum/qec/: README.md  __init__.py  framework.py
rocQuantum-main/rocquantum/qec/codes/: repetition_code.py
rocQuantum-main/rocquantum/qec/decoders/: repetition_decoder.py
rocQuantum-main/rocquantum/solvers/: README.md  __init__.py  qaoa.py  vqe_solver.py
rocQuantum-main/rocquantum/src/: Pathfinder.cpp  kernels.hip.cpp  simulator.cpp
rocQuantum-main/rocquantum/src/hipDensityMat/: CMakeLists.txt  hipDensityMat.cpp  hipDensityMat.hpp  hipDensityMat_internal.hpp  rocDensityMatCompat.cpp
rocQuantum-main/rocquantum/src/hipStateVec/: CMakeLists.txt  GateFusion.cpp  MULTI_GPU_GUIDE.md  hipStateVec.cpp  measurement_kernels.hip  multi_qubit_kernels.hip  single_qubit_kernels.hip  swap_kernels.hip  test_hipStateVec_multi_gpu.cpp  two_qubit_kernels.hip
rocQuantum-main/rocquantum/src/hipTensorNet/: AccumulationKernels.hip.cpp  CMakeLists.txt  PermutationKernels.hip  TensorView.cpp  (+7 more)
rocQuantum-main/rocquantum/utils/: hamiltonian.py
rocQuantum-main/scripts/: check_async_contract.sh  native_framework_smoke.py  probe_rocm_runtime.sh  validate_cmake_install_consumer.sh
rocQuantum-main/tests/: test_advanced_gates.py  test_alice_bob_backend.py  test_benchmark_release_contract.py  test_bindings.py  test_cirq_integration.py  test_cpp_expectation.py  test_cudaqx_layer_contract.py  test_densitymat_contract.py  test_e2e_compiler_python_flows.py  test_framework.py  test_framework_benchmark_contract.py  test_framework_integration_contract.py  test_frameworks.py  test_infleqtion_backend.py  test_ionq_backend.py  test_iqm_backend.py  test_legacy_python_api.py  test_orca_backend.py  test_p0_fixes.py  test_p1_compiler.py  test_p2_packaging.py  test_pasqal_backend.py  test_pennylane_integration.py  test_provider_backend_contract.py  test_qiskit_pennylane_installed_contract.py  test_quantinuum_backend.py  test_quantum_machines_backend.py  test_quera_backend.py  test_rccl_distributed_contract.py  test_rigetti_backend.py  test_rocm_compatibility_contract.py  test_runtime_api_contract.py  test_seeqc_backend.py  test_statevec_fastpath_contract.py  test_tensornet_contract.py  test_xanadu_backend.py
(+31 files in other folders)
