[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocquantum"
version = "1.0.0-dev"
description = "A hardware-agnostic quantum computing framework for AMD GPUs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["quantum", "computing", "rocm", "amd", "gpu", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
backends = ["requests>=2.28", "boto3>=1.26"]
pennylane = ["pennylane>=0.30"]
dev = ["pytest>=7.0", "numpy>=1.21"]
all = ["rocquantum[backends,pennylane,dev]"]

[project.scripts]
rocq = "rocq_cli:main"

[tool.setuptools.packages.find]
include = ["rocq*", "rocquantum*"]
exclude = ["tests*", "build*", "examples*"]
