[build-system]
requires = ["scikit-build-core>=0.11.0", "pybind11>=2.10", "cmake>=3.21", "ninja>=1.11"]
build-backend = "scikit_build_core.build"

[project]
name = "rocquantum"
version = "1.0.0-dev"
description = "A hardware-agnostic quantum computing framework for AMD GPUs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["quantum", "computing", "rocm", "amd", "gpu", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
backends = ["requests>=2.28", "boto3>=1.26"]
pennylane = ["pennylane>=0.30"]
qiskit = ["qiskit>=0.45"]
dev = ["pytest>=7.0", "numpy>=1.21"]
all = ["rocquantum[backends,pennylane,qiskit,dev]"]

[project.scripts]
rocq = "rocq_cli:main"

[project.entry-points."pennylane.plugins"]
"rocquantum.qpu" = "pennylane_rocq:RocQDevice"
"rocq.pennylane" = "pennylane_rocq:RocqDevice"
"lightning.rocq" = "pennylane_rocq:LightningRocqDevice"
"lightning.rocm" = "pennylane_rocq:LightningRocmDevice"

[project.entry-points."qiskit.providers"]
rocquantum = "qiskit_rocquantum_provider:RocQuantumProvider"

[tool.scikit-build.cmake]
minimum-version = "3.21"

[tool.scikit-build.wheel.packages]
rocq = "rocq"
rocquantum = "rocquantum"
qiskit_rocquantum_provider = "integrations/qiskit-rocquantum-provider/qiskit_rocquantum_provider"
pennylane_rocq = "integrations/pennylane-rocq/pennylane_rocq"
